# aithinkers-hackathon-setup

./: .gitignore  Dockerfile  POC.md  README.md  aithinkers-hackathon-stack.md  docker-compose.yaml
agent/: Dockerfile  main.py  pyproject.toml  server.py
agent/lab_agent/: agent.py
agent/lab_agent/a2ui/: catalog.py
agent/lab_agent/tools/: mcp_proxy.py
frontend-module/lab/catalog/: LabPanelRenderer.tsx  labCatalog.tsx
frontend-module/lab/catalog/components/: LabDataChart.tsx  LabIframeTool.tsx  LabResultTable.tsx  LabStatusCard.tsx
frontend-module/lab/components/: AgenticWindow.tsx  LabChatProto.tsx
frontend-module/lab/providers/: LabCopilotProvider.tsx
frontend-module/lab/resources/: agentConfigResource.tsx  labProjectResource.tsx  labResources.tsx  mcpServerResource.tsx
