[project]
name = "lab-agent"
version = "0.1.0"
description = "FabLabOS ADK agent with AG-UI protocol support"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.16.0,<2.0.0",
    "ag-ui-adk>=0.6.0",
    "ag-ui-protocol>=0.1.15",
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "google-generativeai>=0.8.0",
]

[dependency-groups]
dev = []
